--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,6 +18,7 @@
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/controllers/volunteer.js"></script>
+    <script src="js/controllers/form.js"></script>
 </head>
 <body>
 <div class="container" ng-app="MOW" >
