move each tabbed form to its own template

--- a/public/views/volunteer/details.html
+++ b/public/views/volunteer/details.html
@@ -3,127 +3,6 @@
 	<li ng-class="{'active':tab===2}"><a href="#" ng-click="tab = 2">Car Info</a></li>
 	<li ng-class="{'active':tab===3}"><a href="#" ng-click="tab = 3">Availability</a></li>
 </ul>
-<!-------------------------------------- CONTACT INFORMATION ------------------------------------------------------>
-<div ng-show="tab === 1">
-	<h2>Contact information for {{v.username}}</h2>
-		
-	<form role="form" class="form-horizontal" novalidate 
-		name="contactForm"	
-		ng-submit="contactForm.$dirty && updateInfo(contactForm.$valid)"
-		ng-init="init()">
-		
-		<alert></alert>
-		<div class="form-group">
-			<label class="control-label col-sm-2">Username</label>
-			<div class="col-sm-4"><input name="username" type="text" ng-model="v.username" class="form-control" disabled></div>
-			<div class="col-sm-6"></div>
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-2">Email</label>
-			<div class="col-sm-4"><input name="email" type="email" ng-model="v.email" class="form-control" required ng-change="email_changed = true"></div>
-			<div class="col-sm-6" ng-show="contactForm.$dirty && contactForm.$submitted">
-				<span class="text-danger" ng-show="!v.email">Email is required.</span>
-				<span class="text-danger" ng-show="contactForm.email.$invalid">Email is invalid.</span>
-			</div>
-		</div>
-		<div class="form-group" ng-show="email_changed">
-			<label class="control-label col-sm-2"></label>
-			<div class="col-sm-4"><input name="email_confirm" type="email" ng-model="v.email_confirm" class="form-control" compare-to="email_changed ? v.email : null" placeholder="Confirm Email"></div>
-			<div class="col-sm-6" ng-show="contactForm.$dirty && contactForm.$submitted">
-				<span class="text-danger" ng-show="!contactForm.email_confirm.$viewValue">Confirm Email is required.</span>
-				<span class="text-danger" ng-show="contactForm.email_confirm.$error.compareTo">Confirm Email doesn't match Email.</span>
-			</div>	
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-2">Address</label>
-			<div class="col-sm-4"><input name="address_line1" type="text" ng-model="v.address.line1" class="form-control" required></div>		
-			<div class="col-sm-6" ng-show="contactForm.$dirty && contactForm.$submitted">
-				<span class="text-danger" ng-show="!v.address.line1">Address is required.</span>
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-2"></label>
-			<div class="col-sm-4"><input name="address_line2" type="text" ng-model="v.address.line2" class="form-control"></div>
-			<div class="col-sm-6"></div>
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-2">City/Zip</label>
-			<div class="col-sm-3"><input  name="city" type="text" ng-model="v.address.city" class="form-control" required></div>
-			<div class="col-sm-1"><input  name="zip" type="text" ng-model="v.address.zip" class="form-control" ng-pattern="/^\d{4}$/" required></div>
-			<div class="col-sm-6" ng-show="contactForm.$dirty && contactForm.$submitted">
-				<span class="text-danger" ng-show="!v.address.zip">Zip is required.</span>
-				<span class="text-danger" ng-show="contactForm.address.zip.$invalid">Zip is invalid.</span>
-				<span class="text-danger" ng-show="!v.address.city">City is required.</span>
-			</div>
-		</div>
-		<div class="form-group" ng-repeat="phone in v.phone track by $index">
-			<label class="control-label col-sm-2"><span ng-show="$index==0">Phone</span></label>
-			<div class="col-sm-3"><input name="phone_{{$index}}" type="text" ng-model="v.phone[$index]" class="form-control" ng-pattern="/^\d{10}$/" value="{{phone}}" ng-required="v.phone.length==1"></div>
-			<div class="col-sm-1">
-				<span ng-click="removePhone($index)" ng-show="v.phone.length>1 && $index!=v.phone.length-1"  class="glyphicon glyphicon-minus btn btn-danger btn-xs" ></span>
-				<span ng-click="addPhone(contactForm['phone_'+$index].$valid)" ng-show="$index==v.phone.length-1" class="glyphicon glyphicon-plus btn btn-success btn-xs" ></span>
-			</div>
-			<div class="col-sm-6" ng-show="contactForm.$dirty && contactForm.$submitted">
-				<span class="text-danger" ng-show="v.phone.length==1 && v.phone[$index]==null">Phone is required.</span>
-				<span class="text-danger" ng-show="contactForm['phone_'+$index].$dirty && contactForm['phone_'+$index].$invalid">Phone is invalid.</span>
-			</div>
-		</div>
-		<div class="form-group">
-			<div class="col-sm-1 col-sm-offset-5">
-				<input type="submit" value="Update" class="btn btn-primary" >
-			</div>
-		</div>
-	</form>
-</div>
-<!-------------------------------------- CAR INFORMATION ------------------------------------------------------>
-<div ng-show="tab === 2">
-	<h2>Car information  for {{v.username}}</h2>
-	<form role="form" class="form-horizontal" novalidate 
-		name="carForm"	
-		ng-submit="carForm.$dirty && updateInfo(carForm.$valid)">
-		
-		<alert></alert>
-		<div class="form-group">
-			<label class="control-label col-sm-2">Registration</label>
-			<div class="col-sm-4"><input name="car_registration" type="text" ng-model="v.car.registration" class="form-control" required></div>		
-			<div class="col-sm-6" ng-show="carForm.$dirty && carForm.$submitted">
-				<span class="text-danger" ng-show=" !v.car.registration">Registration is required.</span>
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-2">Insurer</label>
-			<div class="col-sm-4"><input name="car_insurer" type="text" ng-model="v.car.insurance.insurer" class="form-control" required></div>		
-			<div class="col-sm-6" ng-show="carForm.$dirty && carForm.$submitted">
-				<span class="text-danger" ng-show=" !v.car.insurance.insurer">Insurer is required.</span>
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-2">Policy Nr.</label>
-			<div class="col-sm-4"><input name="car_policy_nr" type="text" ng-model="v.car.insurance.policy_nr" class="form-control" required></div>		
-			<div class="col-sm-6" ng-show="carForm.$dirty && carForm.$submitted">
-				<span class="text-danger" ng-show="!v.car.insurance.policy_nr">Policy Nr. is required.</span>
-			</div>
-		</div>
-		<div class="form-group">
-			<div class="col-sm-6">
-				<input type="submit" value="Update" class="btn btn-primary pull-right" >
-			</div>
-		</div>
-	</form>
-</div>
-<!-------------------------------------- AVAILABILITY ------------------------------------------------------>
-<div ng-show="tab === 3">
-	<h2>Availability for {{v.username}}</h2>
-	<form role="form" class="form-horizontal" novalidate 
-		name="availabilityForm"	
-		ng-submit="availabilityForm.$dirty && updateInfo(availabilityForm.$valid)">
-		
-		<alert></alert>
-		
-		<div class="form-group">
-			<div class="col-sm-6">
-				<input type="submit" value="Update" class="btn btn-primary pull-right" >
-			</div>
-		</div>
-	</form>
-</div>
+<div ng-show="tab === 1" ng-include="'/views/volunteer/_form_contact.html'"></div>
+<div ng-show="tab === 2" ng-include="'/views/volunteer/_form_car.html'"></div>
+<div ng-show="tab === 3" ng-include="'/views/volunteer/_form_availability.html'"></div>
