--- a/public/views/volunteer/_form_contact.html
+++ b/public/views/volunteer/_form_contact.html
@@ -1,8 +1,7 @@
 <h2>Contact information for {{v.username}}</h2>
 <form role="form" class="form-horizontal" novalidate 
 		name="contactForm"	
-		ng-submit="contactForm.$dirty && updateInfo(contactForm.$valid)"
-		ng-init="init()">
+		ng-submit="contactForm.$dirty && updateInfo(contactForm.$valid)">
 		
 		<alert></alert>
 		<div class="form-group">
