--- a/public/views/volunteer/details.html
+++ b/public/views/volunteer/details.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs" role="tablist" ng-init="tab = 1">
+<ul class="nav nav-tabs" role="tablist">
 	<li ng-class="{'active':tab===1}"><a href="#" ng-click="tab = 1;">Contact Info</a></li>
 	<li ng-class="{'active':tab===2}"><a href="#" ng-click="tab = 2">Car Info</a></li>
 	<li ng-class="{'active':tab===3}"><a href="#" ng-click="tab = 3">Availability</a></li>
