Bugfixing app flow
FIX move all functions using $scope.v inside init()
FIX volunteer list link not reloading volunteer data properly
FIX form.$setPristine()

--- a/public/views/volunteer/_form_availability.html
+++ b/public/views/volunteer/_form_availability.html
@@ -2,7 +2,7 @@
 	<h2>Availability for {{v.username}}</h2>
 	<form role="form" class="form-horizontal" novalidate 
 		name="availabilityForm"	
-		ng-submit="updateInfo(availabilityForm.$valid)">
+		ng-submit="updateInfo(availabilityForm)">
 		
 		<alert></alert>
 		
