--- a/public/views/volunteer/_form_car.html
+++ b/public/views/volunteer/_form_car.html
@@ -1,7 +1,7 @@
 <h2>Car information  for {{v.username}}</h2>
 	<form role="form" class="form-horizontal" novalidate 
 		name="carForm"	
-		ng-submit="carForm.$dirty && updateInfo(carForm.$valid)">
+		ng-submit="carForm.$dirty && updateInfo(carForm)">
 		
 		<alert></alert>
 		<div class="form-group">
