MOVE all functions using $scope.v inside of init() MOD update button

--- a/public/views/volunteer/_form_car.html
+++ b/public/views/volunteer/_form_car.html
@@ -26,8 +26,8 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<div class="col-sm-6">
-				<input type="submit" value="Update" class="btn btn-primary pull-right" >
+			<div class="col-sm-2 col-sm-offset-2">
+				<input type="submit" value="Update" class="btn btn-warning btn-block" >
 			</div>
 		</div>
 	</form>
