--- a/public/views/index.html
+++ b/public/views/index.html
@@ -17,6 +17,7 @@
     <!-- ANGULAR CUSTOM -->
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
+    <script src="js/controllers/navigation.js"></script>
     <script src="js/controllers/volunteer.js"></script>
     <script src="js/controllers/form.js"></script>
 </head>
