--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,8 +18,10 @@
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/controllers/navigation.js"></script>
-    <script src="js/controllers/volunteer.js"></script>
     <script src="js/controllers/form.js"></script>
+    <script src="js/controllers/user.js"></script>
+    <script src="js/controllers/volunteer.js"></script>
+    <script src="js/controllers/driver.js"></script>
 </head>
 <body>
 <div class="container" ng-app="MOW" >
@@ -32,6 +34,7 @@
 
         <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
         <ul class="nav navbar-nav">
+            <li><a href="/users">Users</a></li>
             <li><a href="/volunteers">Volunteers</a></li>
             <li><a href="/register">Register</a></li>
         </ul>
